footer front design

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,86 @@
 <link rel="stylesheet" type="text/css" href="http://localhost/ellpeProject/footer.css">
 
-<div class="footer">
-  <span>footer Area</span>
+<div class="footerArea">
+  <div class="foot_top">
+    <ul>
+      <li class="foot1">
+        <div>
+          <h3>INFORMATION</h3>
+          <p>company. (주)또롱컴퍼니 owner. 박소정</p>
+          <p>business no. 12-345-6789</p>
+          <p>mail order license. 2022-마산회원구-0825 [사업자정보확인]</p>
+          <p>personal info manager. 박소정 (ddorongellpe@ellpe.co.kr)</p>
+          <p>address. [] 000 123-4, masanhoewon-gu, changwon-si, Gyeongsangnam-do</p>
+        </div>
+      </li>
+      <li class="foot2">
+        <div>
+          <h3>C/S CENTER</h3>
+          <p id="cpnNum">1234-1234</p>
+          <p>평일 10:30 ~ 17:30 / 점심 12:00 ~ 13:00</p>
+          <p>(토, 일, 공휴일 휴무)</p>
+          <div class="cs_btnArea">
+            <div class="cs_btn1">
+              고객센터
+            </div>
+            <div class="cs_btn2">
+              자주묻는질문
+            </div>
+          </div>
+
+        </div>
+      </li>
+      <li class="foot3">
+        <div>
+          <h3>BANK ACCOUNT</h3>
+          <p>국민 598000-01-000000</p>
+          <p>신한 100-000-9875643</p>
+          <p>농협 301-0123-4566-11</p>
+          <p>예금주:(주)또롱컴퍼니</p>
+          <select class="bankList">
+            <option value="1">인터넷뱅킹 바로가기</option>
+            <option value="2">국민은행</option>
+            <option value="3">우체국</option>
+            <option value="4">NH농협</option>
+            <option value="5">SC제일은행</option>
+            <option value="6">우리은행</option>
+            <option value="7">IBK기업은행</option>
+            <option value="8">KEB하나은행</option>
+            <option value="9">신한은행</option>
+            <option value="10">광주은행</option>
+            <option value="11">대구은행</option>
+            <option value="12">전북은행</option>
+            <option value="13">부산은행</option>
+            <option value="14">한국씨티은행</option>
+            <option value="15">제주은행</option>
+            <option value="16">경남은행</option>
+          </select>
+        </div>
+      </li>
+      <li class="foot4">
+        <div>
+          <h3>[환불/반품 주소]</h3>
+          <p>경상남도 창원시 마산회원구 000번지 1층 </p><p>CJ대한통운 직영1팀</p>
+          <p>CJ대한통운 고객센터 : 1111-2222</p>
+          <p class="return_adr1">* 공지사항 및 이용안내를 참고하여 <br>지정택배사로 반품요청해주세요.</p>
+        </div>
+      </li>
+      <li class="foot5">
+        <div>
+          <h3>COPYRIGHT</h3>
+          <p>모든이미지는 <span>(주)또롱컴퍼니</span>의 소유로 법적인 보호를 받고 있습니다. 무단게재 및 도용시 저작권법에 의해 형사고발 및 손해배상을 묻습니다.</p>
+          <p class="copyr">copyright © 또롱엘프 all rights reserved published by plain design</p>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="foot_btm">
+    <ul>
+      <a href=""><li>홈으로<span>|</span></li></a>
+      <a href=""><li>회사소개<span>|</span></li></a>
+      <a href=""><li>이용약관<span>|</span></li></a>
+      <a href=""><li>개인정보취급방침<span>|</span></li></a>
+      <a href=""><li>이용안내</li></a>
+    </ul>
+  </div>
 </div>
