주소 상대경로로 변경, 장바구니 오류 수정

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="http://localhost/ellpeProject/footer.css">
+<link rel="stylesheet" type="text/css" href="/ellpeProject/footer.css">
 
 <div class="footerArea">
   <div class="foot_top">
